--- a/xrdCode.ipynb
+++ b/xrdCode.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# The set of functions were written for plotting xrd diffraction patterns against simulated diffraction patterns generated from cif crystal structure files from the materials project."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
